adding what I have so far

--- a/index.html
+++ b/index.html
@@ -74,18 +74,9 @@
         [ read more ]
     </div>
 </article>
-    </div>
+</div>
 
-    <!-- <section class="profile-container">
-        <section class="left-profiles">
-            <section class="top-left-profiles">
-                <div class="profiles num1"><span>lance mountain</span></div>
-                <div class="profiles num2"><span>rodney mullen</span></div>
-            </section>
-            <div class="profiles num3"><span>steve caballero</span></div>
-        </section>
-        <div class="profiles num4"><span>tommy guerrero</span></div>
-    </section> -->
+
 <section class="skateboards">
     <ul>
         <li><img src="assets/sk8-3.png" alt="#"/></li>
@@ -100,28 +91,34 @@
         <li><img src="assets/sk8-1.png" alt="#"/></li>
     </ul>
 </section>
-<section class="contact">
-    <h1>Contact us for More Information</h1>
+<div class="contact">
+    <div class="nav2">
+        <h1>Contact us for More Information</h1>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto debitis deleniti deserunt dolorum eius,
-        expedita, illo iusto laborum magnam nam pariatur perferendis quod repellat saepe voluptatum. Magnam porro
-        quisquam totam.
-    </p>
-    <section class="nav2">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto debitis deleniti deserunt dolorum eius,
+            expedita, illo iusto laborum magnam nam pariatur perferendis quod repellat saepe voluptatum. Magnam porro
+            quisquam totam.
+        </p>
         <ul>
             <li class="sm-facebook"><img src="assets/facebook2.png" alt="#"/></li>
             <li class="sm-rss"><img src="assets/rss2.png" alt="#"/></li>
             <li class="sm-tweet"><img src="assets/tweet2.png" alt="#"/></li>
             <li class="sm-youtube"><img src="assets/youtube2.png" alt="#"/></li>
         </ul>
-    </section>
+    </div>
     <section class="contact-info">
-        <div><span>Name</span></div>
-        <div><span>email</span></div>
-        <div><span>your message</span></div>
-        <button>submit</button>
+        <div>
+            <span>Name</span>
+        </div>
+        <div>
+            <span>email</span>
+        </div>
+        <div class="message">
+            <span>your message</span>
+        </div>
+
     </section>
-</section>
+</div>
 </div>
 <!-- end of container -->
 </body>
